@@ -2,6 +2,7 @@
 Version 1.3.1
 
     - Added `--blockCacheMaxDirty' flag.
+    - Fixed cURL handle leak when cancelling in-progress writes.
 
 Version 1.3.0 (r392) released 27 Sep 2009
 
